--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header{
 
 h1{
   font-family: "Oswald", sans-serif;
-  font-size: 2.5em;
+  font-size: 3em;
   line-height: 100px;
   text-align: center;
   text-shadow: 3px 3px 5px var(--color3);
@@ -57,7 +57,7 @@ main{
 
 #explication{
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   margin-bottom: 10px;
   color: var(--color2);
 }
@@ -84,7 +84,7 @@ button{
   color: var(--color1);
   border: 1px solid var(--color3);
   transition: 0.2s linear 0s;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   border-radius: 10px;
   box-shadow: 0 0 5px var(--color1);
 }
@@ -112,14 +112,14 @@ button:active{
   font-family: "Oswald", sans-serif;
   background-color: var(--color3);
   width: 80%;
-  height: 300px;
+  height: 50vh;
   margin: 50px auto;
   perspective: 100px;
   position: relative;
 }
 
 #conteneur-citation>blockquote{
-  font-size: 1.25rem;
+  font-size: 1.3rem;
   text-align: center;
   opacity: 1;
 }
@@ -133,9 +133,20 @@ button:active{
 
 #photo{
   position: absolute;
-  left: 62%;
+  left: 66%;
   height: 115px;
   border-radius: 50%;
+}
+
+#fond{
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  left: 0%;
+  height: 50vh;
+  opacity: 0.6;
+  border-bottom-left-radius: 250px;
+  border-bottom-right-radius: 250px;
 }
 
 @keyframes afficheCitation{
@@ -153,5 +164,14 @@ button:active{
   to{
     opacity: 1;
     transform: translateZ(0px);
+  }
+}
+
+@keyframes afficheFond{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 0.6;
   }
 }
