--- a/style.css
+++ b/style.css
@@ -114,50 +114,138 @@ button:active{
   font-family: "Oswald", sans-serif;
   background-color: var(--color3);
   width: 80%;
-  height: 65vh;
-  margin: 20px auto;
+  height: 58vh;
+  margin: 10px auto;
   perspective: 100px;
   position: relative;
 }
 
 #conteneur-citation>blockquote{
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   word-spacing: 0.25px;
   letter-spacing: -0.5px;
   text-align: center;
-  opacity: 1;
+  color: var(--color1);
 }
 
 #auteur{
   font-weight: bold;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   margin: 10px 0 0 60%;
-  opacity: 1;
+  color: var(--color1);
 }
 
 #photo{
   position: absolute;
   margin-top: -25px;
   left: 15%;
-  width: 100px;
-  height: 115px;
+  width: 150px;
+  height: 175px;
   border-radius: 50%;
+}
+
+#fond{
+  position: absolute;
+  top: 0vh;
+  margin-left: -11%;
+  width: 120%;
+  height: 50vh;
+  z-index: -10;
+  opacity: 0.1;
 }
 
 @keyframes afficheCitation{
   from{
     transform: translateY(1000px) translateZ(200px);
-    opacity: 0;
-  }
-  25%{
-    opacity: 0.50;
   }
   50%{
     transform: translateZ(0px);
-    opacity: 0.75;
   }
   to{
-    opacity: 1;
     transform: translateY(0) translateZ(0px);
+  }
+}
+
+@keyframes changeCouleurCitation{
+  from{
+    color: var(--color3);
+  }
+  66%{
+    color: var(--color3);
+  }
+  to{
+    color: var(--color1);
+  }
+}
+
+@keyframes effacePhoto{
+  50%{
+    transform: translateZ(200px) translateX(1000px) translateY(200px);
+  }
+  75%{
+    transform: translateZ(50px) translateX(-30px) translateY(50px);
+  }
+  to{
+    transform: translate(0);
+  }
+}
+
+@keyframes animFond{
+  from{
+    opacity: 0;
+  }
+  33%{
+    opacity: 1;
+  }
+  to{
+    opacity: 0.1;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1079px){
+  .conteneur-options{
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+    "tous bon cou lib"
+    "sag mor rev sen";
+  }
+  #photo{
+    left: 40%;
+    width: 125px;
+    height: 150px;
+  }
+  #conteneur-citation{
+    margin: 50px auto;
+  }
+}
+
+@media screen and (min-width: 1080px){
+  .conteneur-options{
+    width: 50%;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-areas:
+    "tous bon cou lib sag mor rev sen";
+    gap: 5px;
+  }
+  #photo{
+    left: 45%;
+    width: 125px;
+    height: 150px;
+  }
+  #conteneur-citation{
+    width: 50%;
+  }
+  #conteneur-citation>blockquote{
+    font-size: 2rem;
+    word-spacing: 0.25px;
+    letter-spacing: -0.5px;
+    text-align: center;
+  }
+
+  #fond{
+    width: 120%;
+    left: -100px;
+    margin: 0 auto;
   }
 }
